--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,17 @@
 # This file will be regenerated if you run travis_pypi_setup.py
 
 language: python
-python: 3.5
+python:
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
 
 env:
   - TOXENV=py35
   - TOXENV=py34
   - TOXENV=py33
   - TOXENV=py27
-  - TOXENV=pypy
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox
