--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,17 @@ envlist = py27, py33, py34, py35
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/catt
+    PYTHONPATH = {toxinidir}:{toxinidir}/bakeit
 commands = python setup.py test
 
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+[testenv:py27]
+basepython = python2.7
+
+[testenv:py33]
+basepython = python3.3
+
+[testenv:py34]
+basepython = python3.4
+
+[testenv:py35]
+basepython = python3.5
