--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-# Config file for automatic testing at travis-ci.org
-# This file will be regenerated if you run travis_pypi_setup.py
-
 language: python
 python:
   - "2.7"
@@ -8,14 +5,5 @@ python:
   - "3.4"
   - "3.5"
 
-env:
-  - TOXENV=py35
-  - TOXENV=py34
-  - TOXENV=py33
-  - TOXENV=py27
-
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox
-
 # command to run tests, e.g. python setup.py test
-script: tox
+script: python setup.py test
