--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ python:
 
 # command to run tests, e.g. python setup.py test
 script:
+  - pip install flake8
   - python setup.py test
   - flake8 .
