--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ python:
   - "3.4"
   - "3.5"
 
+install: "pip install -r requirements_dev.txt"
+
 # command to run tests, e.g. python setup.py test
 script:
-  - pip install flake8
   - python setup.py test
   - flake8 .
