--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py27, py33, py34, py35
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/bakeit
+    PYTHONPATH = {toxinidir}:{toxinidir}/catt
 commands = python setup.py test
 
 [testenv:py27]
