--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,9 @@
 wheel==0.23.0
 watchdog==0.8.3
-flake8==2.4.1
+flake8
+flake8-import-order
+flake8-tidy-imports
+pep8-naming
 tox==2.1.1
 coverage==4.0
 Sphinx==1.3.1
