Fix style more.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ universal = 1
 [flake8]
 exclude = docs
 ignore=E501
+import-order-style = smarkets
 
 [semantic_release]
 version_variable = catt/__init__.py:__version__
