--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,16 @@
 [tox]
-envlist = py27, py33, py34, py35
+envlist = py34, py35, py36
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/catt
 commands = python setup.py test
 
-[testenv:py27]
-basepython = python2.7
-
-[testenv:py33]
-basepython = python3.3
-
 [testenv:py34]
 basepython = python3.4
 
 [testenv:py35]
 basepython = python3.5
+
+[testenv:py36]
+basepython = python3.6
