--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 
 install: "pip install -r requirements_dev.txt"
 
+# command to run tests, e.g. python setup.py test
 script:
   - python setup.py test
   - flake8 catt
