--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,7 +3,7 @@ watchdog==0.8.3
 flake8
 flake8-import-order
 flake8-tidy-imports
-pep8-naming
+pep8-naming!=0.6.0
 tox==2.1.1
 coverage==4.0
 Sphinx==1.3.1
