detect flake8 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install: "pip install -r requirements_dev.txt"
 # command to run tests, e.g. python setup.py test
 script:
   - python setup.py test
+  - flake8 --version
   - flake8 catt
