Add pre-commit config

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,12 @@ exclude = docs
 ignore = E501
 import-order-style = smarkets
 
+[isort]
+include_trailing_comma = true
+line_length = 120
+force_grid_wrap = 0
+multi_line_output = 3
+skip=migrations,node_modules
+
 [semantic_release]
 version_variable = catt/__init__.py:__version__
