--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ install: "pip install -r requirements_dev.txt"
 
 script:
   # Only run this on Python 3.6.
-  - command -v python3.6 && pre-commit run -a
+  - if command -v python3.6; then pre-commit run -a; fi
   - python setup.py test
