--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,12 @@ repos:
 -   repo: git://github.com/doublify/pre-commit-isort
     rev: v4.3.0
     hooks:
-    -   id: isort
+    - id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.3.0
     hooks:
-    -   id: flake8
+    - id: flake8
+      additional_dependencies: [flake8~=3.6.0]
 -   repo: git://github.com/skorokithakis/pre-commit-mypy
     rev: v0.1.0
     hooks:
