Generate changelog on commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ python:
 install: "pip install -r requirements_dev.txt"
 
 script:
-  - if [[ $TRAVIS_PYTHON_VERSION == 3.6* ]] ; then pre-commit run -a; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.6* ]] ; then pre-commit run -a --hook-stage=manual; fi
   - if [[ $TRAVIS_PYTHON_VERSION != 3.4* ]] ; then mypy --ignore-missing-imports --follow-imports=skip catt; fi
   - python setup.py test
