--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     hooks:
     - id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v2.0.0
     hooks:
     - id: flake8
       additional_dependencies: [flake8~=3.6.0]
@@ -18,3 +18,12 @@ repos:
     hooks:
     - id: mypy
       args: [-s]
+-   repo: local
+    hooks:
+    - id: gitchangelog
+      language: system
+      always_run: true
+      pass_filenames: false
+      name: Generate changelog
+      entry: bash -c "gitchangelog > CHANGELOG.md"
+      stages: [commit]
