Add bumpversion config

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,9 @@ skip=migrations,node_modules
 
 [semantic_release]
 version_variable = catt/__init__.py:__version__
+
+[bumpversion]
+tag = True
+commit = True
+
+[bumpversion:file:catt/__init__.py]
