--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+[bumpversion]
+tag = True
+commit = True
+current_version = 0.9.3
+
 [wheel]
 universal = 1
 
@@ -11,13 +16,10 @@ include_trailing_comma = true
 line_length = 120
 force_grid_wrap = 0
 multi_line_output = 3
-skip=migrations,node_modules
+skip = migrations,node_modules
 
 [semantic_release]
 version_variable = catt/__init__.py:__version__
 
-[bumpversion]
-tag = True
-commit = True
-
 [bumpversion:file:catt/__init__.py]
+
