fix: Only build py3 wheels/packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,12 @@ exclude = docs
 ignore = E501
 import-order-style = smarkets
 
+[bdist_wheel]
+python-tag = py3
+
+[options]
+python_requires = >= 3.4
+
 [isort]
 include_trailing_comma = true
 line_length = 120
