--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,8 @@ repos:
     hooks:
     - id: black
       args: [--line-length=120]
--   repo: git://github.com/doublify/pre-commit-isort
-    rev: v4.3.0
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v4.3.21
     hooks:
     - id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
