--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 18.9b0
+    rev: 19.10b0
     hooks:
     - id: black
       args: [--line-length=120]
@@ -8,16 +8,17 @@ repos:
     rev: v4.3.0
     hooks:
     - id: isort
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.0.0
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: '3.8.3'
     hooks:
     - id: flake8
-      additional_dependencies: [flake8~=3.6.0]
--   repo: git://github.com/skorokithakis/pre-commit-mypy
-    rev: v0.610
+      args: ["--config=setup.cfg"]
+      language_version: python3
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.782
     hooks:
     - id: mypy
-      args: [-s]
+      args: ["--ignore-missing-imports"]
 -   repo: local
     hooks:
     - id: gitchangelog
