Add Python 3.7 and 3.8 to testing and remove 3.4

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,19 @@
 [tox]
-envlist = py34, py35, py36
+envlist = py35, py36, py37, py38
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/catt
 commands = python setup.py test
 
-[testenv:py34]
-basepython = python3.4
-
 [testenv:py35]
 basepython = python3.5
 
 [testenv:py36]
 basepython = python3.6
+
+[testenv:py37]
+basepython = python3.7
+
+[testenv:py38]
+basepython = python3.8
