--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,7 +4,7 @@ pep8-naming
 tox>=3.13.2
 coverage
 Sphinx==1.3.1
-pre-commit>=2.7.1
+pre-commit>=2.7.1;python_version=="3.7"
 virtualenv>=20.0.8
 isort
 mypy
