--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/dev'
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -16,9 +16,15 @@ jobs:
           python-version: '3.8'
 
       - name: Install dependencies
-        run: pip install -U "twine"
+        run: pip install -U twine pre-commit gitchangelog pystache wheel
+      - name: Fetch all tags
+        run: git fetch --prune --unshallow --tags || true
+      - name: Generate changelog
+        run: pre-commit run -a gitchangelog || true
+      - name: Run pre-commit
+        run: pre-commit run -a
       - name: Build wheel
-        run: python setup.py sdist bdist_wheel
+        run: python3 setup.py sdist bdist_wheel
       - name: Deploy to pypi
         env:
           TWINE_USERNAME: __token__
