Black and flake doesnt agree on linebreaks
..before binary operators

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ universal = 1
 
 [flake8]
 exclude = docs
-ignore = E501
+ignore = E501,W503
 import-order-style = smarkets
 
 [bdist_wheel]
@@ -28,4 +28,3 @@ skip = migrations,node_modules
 version_variable = catt/__init__.py:__version__
 
 [bumpversion:file:catt/__init__.py]
-
