Use Pytest for testing because Tox is impossible

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: python:3.8
+image: python:3.8-slim
 
 stages:
   - test
@@ -18,4 +18,4 @@ test:
     - pip install -Ur requirements_dev.txt
   script:
     - pre-commit run -a --hook-stage manual
-    - tox
+    - pytest
