--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,13 +1,14 @@
-wheel
-flake8
-pep8-naming
-tox>=3.13.2
-coverage
+PyYAML>=5.4;python_version<"3.5"
 Sphinx==1.3.1
-pre-commit
-virtualenv>=20.0.8
+coverage
+flake8
+gitchangelog
 isort
 mypy
-gitchangelog
+pep8-naming
+pre-commit
 pystache
-PyYAML>=5.4;python_version<"3.5"
+pytest
+tox>=3.13.2
+virtualenv>=20.0.8
+wheel
