ci: Fix pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
   hooks:
   - id: mypy
     args: ["--ignore-missing-imports"]
+    additional_dependencies: ["types-requests"]
 - repo: local
   hooks:
   - id: gitchangelog
