--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,14 +28,10 @@ catt = "catt.cli:main"
 python = ">=3.7"
 click = ">=7.1.2"
 ifaddr = ">=0.1.7"
-pychromecast = "==9.2.0"
+pychromecast = ">=12.1.3, <13"
 requests = ">=2.23.0"
 yt-dlp = ">=2021.12.1"
 protobuf = "<4"
-
-# We don't use zeroconf directly, but PyChromecast does, and they aren't great about
-# pinning it, so we've seen breakage. We pin it here just to avoid that.
-zeroconf = "==0.31.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "*"
