--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 repos:
 - repo: https://github.com/ambv/black
-  rev: 22.3.0
+  rev: 23.3.0
   hooks:
   - id: black
     args: [--line-length=120]
 - repo: https://github.com/asottile/reorder_python_imports
-  rev: v3.0.1
+  rev: v3.9.0
   hooks:
   -   id: reorder-python-imports
-- repo: https://gitlab.com/pycqa/flake8
-  rev: '3.9.2'
+- repo: https://github.com/PyCQA/flake8
+  rev: '6.0.0'
   hooks:
   - id: flake8
     args: ["--config=setup.cfg"]
     language_version: python3
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.942
+  rev: v1.2.0
   hooks:
   - id: mypy
     args: ["--ignore-missing-imports"]
