--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,6 @@ sphinx = "==1.3.1"
 tox = ">=3.13.2"
 virtualenv = ">=20.0.8"
 wheel = "*"
+
+[tool.ruff]
+ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
