--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,4 +52,4 @@ virtualenv = ">=20.0.8"
 wheel = "*"
 
 [tool.ruff]
-ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
+lint.ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
