--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,4 +13,4 @@ jobs:
     - uses: actions/setup-python@v3
     - uses: pre-commit/action@v3.0.1
       with:
-        extra_args: --hook-stage=manual
+        extra_args: --all-files --hook-stage=manual
