--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: release-please-action
         uses: googleapis/release-please-action@v4.2.0
+        env:
+          DEBUG: release-please:*
         with:
           release-type: python
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
