--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,7 @@
   "versioning-strategy": "always-bump-patch",
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
+  "debug": true,
   "packages": {
     ".": {
       "release-type": "python",
