--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,14 +1,10 @@
 {
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
+  "always-update": true,
   "packages": {
     ".": {
-      "release-type": "python",
-      "changelog-sections": [
-        { "type": "feat", "section": "Features", "hidden": false },
-        { "type": "fix", "section": "Bug Fixes", "hidden": false },
-        { "type": "perf", "section": "Performance Improvements", "hidden": false }
-      ]
+      "release-type": "python"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
