--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,7 @@
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "always-update": true,
+  "versioning": "always-bump-patch",
   "packages": {
     ".": {
       "release-type": "python"
