ci: Change Release Please configuration

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,14 +1,10 @@
 {
+  "bump-patch-for-minor-pre-major": true,
+  "always-update": true,
+  "versioning": "always-bump-patch",
   "packages": {
     ".": {
-      "release-type": "python",
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
-      "changelog-sections": [
-        { "type": "feat", "section": "Features", "hidden": false },
-        { "type": "fix", "section": "Bug Fixes", "hidden": false },
-        { "type": "perf", "section": "Performance Improvements", "hidden": false }
-      ]
+      "release-type": "python"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
