ci: Add another directive for Release Please to ignore

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,6 @@
 {
   "bump-patch-for-minor-pre-major": true,
+  "bump-minor-pre-major": true,
   "always-update": true,
   "versioning": "always-bump-patch",
   "packages": {
